# autoresearch-team

./: README.md  architecture.md  init_prompt.md  pyproject.toml
infra/: PROVIDER_CONTRACT.md
infra/lightning/: README.md  cli.py  config.py  config.yaml  health_check.py  init_wizard.py  launch.py  proxy.py  sessions.example.yaml  studio_setup.sh  teardown.py  telemetry.py
research-docs/: autoresearch_CLAUDE.md  collaborative_protocols.md  decentralized_architecture.md  next_step_discussion.md  research_and_plan.md
sample-experiments/: README.md
sample-experiments/single-runner/: README.md  run_autoresearch.sh  sessions.yaml
tests/: conftest.py
tests/e2e/: config_e2e.yaml  conftest.py  test_git_coordination.py  test_run_script.py  test_shared_filesystem.py  test_studio_lifecycle.py
