[project]
name = "autoresearch-team"
version = "0.1.0"
description = "Collective intelligence layer for autonomous ML research"
requires-python = ">=3.11"
dependencies = [
    "lightning-sdk",
    "pyyaml",
    "click>=8.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infra"]

[project.scripts]
art = "infra.lightning.cli:cli"
